; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_res_counter.c_res_counter_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_res_counter.c_res_counter_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.res_counter = type { %struct.res_counter*, i8*, i8*, i32 }

@RESOURCE_MAX = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @res_counter_init(%struct.res_counter* %0, %struct.res_counter* %1) #0 {
  %3 = alloca %struct.res_counter*, align 8
  %4 = alloca %struct.res_counter*, align 8
  store %struct.res_counter* %0, %struct.res_counter** %3, align 8
  store %struct.res_counter* %1, %struct.res_counter** %4, align 8
  %5 = load %struct.res_counter*, %struct.res_counter** %3, align 8
  %6 = getelementptr inbounds %struct.res_counter, %struct.res_counter* %5, i32 0, i32 3
  %7 = call i32 @spin_lock_init(i32* %6)
  %8 = load i8*, i8** @RESOURCE_MAX, align 8
  %9 = load %struct.res_counter*, %struct.res_counter** %3, align 8
  %10 = getelementptr inbounds %struct.res_counter, %struct.res_counter* %9, i32 0, i32 2
  store i8* %8, i8** %10, align 8
  %11 = load i8*, i8** @RESOURCE_MAX, align 8
  %12 = load %struct.res_counter*, %struct.res_counter** %3, align 8
  %13 = getelementptr inbounds %struct.res_counter, %struct.res_counter* %12, i32 0, i32 1
  store i8* %11, i8** %13, align 8
  %14 = load %struct.res_counter*, %struct.res_counter** %4, align 8
  %15 = load %struct.res_counter*, %struct.res_counter** %3, align 8
  %16 = getelementptr inbounds %struct.res_counter, %struct.res_counter* %15, i32 0, i32 0
  store %struct.res_counter* %14, %struct.res_counter** %16, align 8
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
